--- a/view/package.json
+++ b/view/package.json
@@ -10,8 +10,10 @@
     "dev": "vite --host 0.0.0.0 --port 3000"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
