--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,10 +1,9 @@
-FROM gradle:8.4.0-jdk17 AS build
-WORKDIR /app
-COPY . .
-RUN gradle build -x test
+FROM gradle:8.4.0-jdk17
 
-FROM eclipse-temurin:17-jdk
 WORKDIR /app
-COPY --from=build /app/build/libs/*.jar app.jar
+
+COPY . .
+
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app.jar"]
+
+CMD ["./gradlew", "bootRun"]
