--- a/view/package.json
+++ b/view/package.json
@@ -13,8 +13,10 @@
     "@tailwindcss/vite": "^4.1.11",
     "ky": "^1.8.1",
     "ky-universal": "^0.12.0",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
