--- a/view/package.json
+++ b/view/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "flowbite": "^3.1.2",
     "ky": "^1.8.1",
     "ky-universal": "^0.12.0",
     "moment": "^2.30.1",
     "react": "^19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
     "tailwindcss": "^4.1.11"
