--- a/view/package.json
+++ b/view/package.json
@@ -19,6 +19,7 @@
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
+    "react-select": "^5.10.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
