--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
+spring.datasource.url=jdbc:postgresql://db:5432/eventsdb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
