--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,8 +1,11 @@
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.devtools.restart.enabled=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 spring.devtools.livereload.enabled=true
-spring.datasource.url=jdbc:postgresql://db:5432/eventsdb
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.devtools.restart.enabled=true
