--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+gradlew text eol=lf
+*.gradle text eol=lf
+*.bat text eol=crlf
